--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "debounce": "^2.1.1",
+    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "vue": "^3.4.29"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.3.1"
   }
 }
